--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,10 @@ name: ci
 
 on: [push, pull_request]
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   build:
-    name: fresh-mtos
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
       - name: Setup Deno
@@ -26,6 +22,17 @@ jobs:
 
       - name: Tests
         run: deno test
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
 
       - name: Release
         uses: softprops/action-gh-release@v1
